[package]
name = "s_001"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "s_001"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "=1.17.17"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
pyth-sdk-solana = { version = "0.10.1", optional = true }
